# Shell

./: .gitignore  CMakeLists.txt  README.md  run.sh
.codecrafters/: compile.sh
app/: main.c
src/: builtin.c  builtin.h  executor.c  executor.h  main.c  parser.c  parser.h
